# ft_ls

./: .gitignore  CMakeLists.txt  Makefile  test.sh
cmd/: fs_helpers.c  ft_ls.h  main.c  parsing.c  prints.c  sorts.c  utils.c
pkg/ft_error/: ft_error.h  log_error.c  panic.c
pkg/ft_list/: delete_list.c  ft_list.c  ft_list.h  list_sort.c
pkg/ft_memory/: ft_bzero.c
pkg/ft_print/: ft_print.h  ft_putstr.c
pkg/ft_string/: ft_string.h  ft_string_concat.c  ft_string_copy.c  ft_strlen.c  ft_to_lower.c  get_after_n_sep.c  string.c
